--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
         </div>
 		<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Shababa Kamreen</h3>            
+            <h3>May Kamreen</h3>            
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -209,7 +209,7 @@
               <li>5455 rows</li>
             </div>
             <div class="resume-item">
-              <h4>Shababa's dataset</h4>
+              <h4>May's dataset</h4>
 			  <li>14 columns</li>
               <li>7920 rows</li>
             </div>
