--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Health Status Prediction</h1>
-      <p>By <span class="typed" data-typed-items="Sarah Price, Ruth Whitehouse, Shababa Kamreen, Lillian Sheppard, IT Girls"></span></p>
+      <p>By <span class="typed" data-typed-items="Sarah Price, Ruth Whitehouse, May Kamreen, Lillian Sheppard, IT Girls"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>About IT Girls</h2>
-          <p>IT Girls is made up of Sarah Price, Ruth Whitehouse, Shababa Kamreen, and Lillian Sheppard. All are Data Science and Analytics Students at Georgia Gwinnett College in Lawrenceville, Georgia.</p>
+          <p>IT Girls is made up of Sarah Price, Ruth Whitehouse, May Kamreen, and Lillian Sheppard. All are Data Science and Analytics Students at Georgia Gwinnett College in Lawrenceville, Georgia.</p>
         </div>
 
         <div class="row">
