--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Age Versus Diagnosis in PCA Context</h3>
             <p>
-              PCA Applied Visualization that shows the relationship between Age and Diagnosis. 1 meanss they have the disease, 0 means they are not diagnosed with the disease.
+              PCA Applied Visualization that shows the relationship between Age and Diagnosis. 1 means they have the disease, 0 means they are not diagnosed with the disease.
             </p>
           </div>
         </div>
