--- a/index.html
+++ b/index.html
@@ -154,25 +154,25 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <p><strong>Sarah's dataset</strong> https://tinyurl.com/dudch3f5</p>
+		    <p><strong>Sarah's dataset</strong> <a href= "https://tinyurl.com/dudch3f5"></a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-              <p><strong>Ruth's dataset</strong> https://tinyurl.com/3yxhf5nz</p>
+		    <p><strong>Ruth's dataset</strong><a href= "https://tinyurl.com/3yxhf5nz"></a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
-              <p><strong>May's dataset</strong> https://tinyurl.com/4vacexj3</p>
+		    <p><strong>May's dataset</strong><a href="https://tinyurl.com/4vacexj3"></a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
-              <p><strong>Lillian's dataset</strong> https://tinyurl.com/bd8t7dyx</p>
+		    <p><strong>Lillian's dataset</strong><a href="https://tinyurl.com/bd8t7dyx"></a></p>
             </div>
           </div>
 
@@ -272,7 +272,7 @@
 
         <div class="section-title">
           <h2>Our Github</h2>
-          <p>https://github.com/GGC-DSA/health-status-prediction</p>
+          <a href="https://github.com/GGC-DSA/health-status-prediction">GitHub for Health Status Prediction</a>
         </div>
 
   </main><!-- End #main -->
