--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Health Status Prediction</title>
+  <title>iPortfolio Bootstrap Template - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -65,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Health Status Prediction</h1>
-      <p>By <span class="typed" data-typed-items="Sarah Price, Ruth Whitehouse, May Kamreen, Lillian Sheppard, IT Girls"></span></p>
+      <p>By <span class="typed" data-typed-items="Sarah Price, Ruth Whitehouse, Shababa Kamreen, Lillian Sheppard, IT Girls"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>About IT Girls</h2>
-          <p>IT Girls is made up of Sarah Price, Ruth Whitehouse, May Kamreen, and Lillian Sheppard. All are Data Science and Analytics Students at Georgia Gwinnett College in Lawrenceville, Georgia.</p>
+          <p>IT Girls is made up of Sarah Price, Ruth Whitehouse, Shababa Kamreen, and Lillian Sheppard. All are Data Science and Analytics Students at Georgia Gwinnett College in Lawrenceville, Georgia.</p>
         </div>
 
         <div class="row">
@@ -110,7 +110,7 @@
           </div>
         </div>
 		<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>May Kamreen</h3>            
+            <h3>Shababa Kamreen</h3>            
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -154,25 +154,25 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-		    <p><strong>Sarah's dataset</strong> https://tinyurl.com/dudch3f5</p>
+              <p><strong>Sarah's dataset</strong> <a href="url"> https://tinyurl.com/dudch3f5 </a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-		    <p><strong>Ruth's dataset</strong> https://tinyurl.com/3yxhf5nz</p>
+              <p><strong>Ruth's dataset</strong> <a href="url"> https://tinyurl.com/3yxhf5nz </a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
-		    <p><strong>May's dataset</strong> https://tinyurl.com/4vacexj3</p>
+              <p><strong>Shababa's dataset</strong> <a href="url"> https://tinyurl.com/4vacexj3 </a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
-		    <p><strong>Lillian's dataset</strong> https://tinyurl.com/bd8t7dyx</p>
+              <p><strong>Lillian's dataset</strong> <a href="url"> https://tinyurl.com/bd8t7dyx </a></p>
             </div>
           </div>
 
@@ -209,7 +209,7 @@
               <li>5455 rows</li>
             </div>
             <div class="resume-item">
-              <h4>May's dataset</h4>
+              <h4>Shababa's dataset</h4>
 			  <li>14 columns</li>
               <li>7920 rows</li>
             </div>
@@ -260,8 +260,16 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Age Versus Diagnosis in PCA Context</h3>
             <p>
-              PCA Applied Visualization that shows the relationship between Age and Diagnosis. 1 means they have the disease, 0 means they are not diagnosed with the disease.
+              PCA Applied Visualization that shows the relationship between Age and Diagnosis. 1.0 means they have the disease, 0.0 means they are not diagnosed with the disease.
             </p>
+          </div>
+		  
+		  <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">            
+			<h3>Principle Component Analysis</h3>          
+			<img src="https://i.imgur.com/yBdvROy.png" alt="PCA Graph">
+			<p>			
+              To determine which factors had the most influence in the dataset, we ran a PCA calculation. As shown in the graph, the first 2 factors had the most impact. The first two factors were age and sex.
+            </p>			
           </div>
         </div>
     </section><!-- End Portfolio Section -->
@@ -272,7 +280,7 @@
 
         <div class="section-title">
           <h2>Our Github</h2>
-          <a href="https://github.com/GGC-DSA/health-status-prediction">GitHub for Health Status Prediction</a>
+          <p><a href="url"> https://github.com/GGC-DSA/health-status-prediction </a></p>
         </div>
 
   </main><!-- End #main -->
