--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Health Status Prediction</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -65,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Health Status Prediction</h1>
-      <p>By <span class="typed" data-typed-items="Sarah Price, Ruth Whitehouse, Shababa Kamreen, Lillian Sheppard, IT Girls"></span></p>
+      <p>By <span class="typed" data-typed-items="Sarah Price, Ruth Whitehouse, May Kamreen, Lillian Sheppard, IT Girls"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>About IT Girls</h2>
-          <p>IT Girls is made up of Sarah Price, Ruth Whitehouse, Shababa Kamreen, and Lillian Sheppard. All are Data Science and Analytics Students at Georgia Gwinnett College in Lawrenceville, Georgia.</p>
+          <p>IT Girls is made up of Sarah Price, Ruth Whitehouse, May Kamreen, and Lillian Sheppard. All are Data Science and Analytics Students at Georgia Gwinnett College in Lawrenceville, Georgia.</p>
         </div>
 
         <div class="row">
@@ -110,7 +110,7 @@
           </div>
         </div>
 		<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Shababa Kamreen</h3>            
+            <h3>May Kamreen</h3>            
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -166,7 +166,7 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
-              <p><strong>Shababa's dataset</strong> <a href="url"> https://tinyurl.com/4vacexj3 </a></p>
+              <p><strong>May's dataset</strong> <a href="url"> https://tinyurl.com/4vacexj3 </a></p>
             </div>
           </div>
 
@@ -209,7 +209,7 @@
               <li>5455 rows</li>
             </div>
             <div class="resume-item">
-              <h4>Shababa's dataset</h4>
+              <h4>May's dataset</h4>
 			  <li>14 columns</li>
               <li>7920 rows</li>
             </div>
