--- a/index.html
+++ b/index.html
@@ -154,25 +154,25 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <p><strong>Sarah's dataset</strong> <a href="url"> https://tinyurl.com/dudch3f5 </a></p>
+              <p><strong>Sarah's dataset</strong> <a href="https://tinyurl.com/dudch3f5"> https://tinyurl.com/dudch3f5 </a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-              <p><strong>Ruth's dataset</strong> <a href="url"> https://tinyurl.com/3yxhf5nz </a></p>
+              <p><strong>Ruth's dataset</strong> <a href="https://tinyurl.com/dudch3f5"> https://tinyurl.com/3yxhf5nz </a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
-              <p><strong>May's dataset</strong> <a href="url"> https://tinyurl.com/4vacexj3 </a></p>
+              <p><strong>May's dataset</strong> <a href="https://tinyurl.com/dudch3f5"> https://tinyurl.com/4vacexj3 </a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
-              <p><strong>Lillian's dataset</strong> <a href="url"> https://tinyurl.com/bd8t7dyx </a></p>
+              <p><strong>Lillian's dataset</strong> <a href="https://tinyurl.com/dudch3f5"> https://tinyurl.com/bd8t7dyx </a></p>
             </div>
           </div>
 
@@ -280,7 +280,7 @@
 
         <div class="section-title">
           <h2>Our Github</h2>
-          <p><a href="url"> https://github.com/GGC-DSA/health-status-prediction </a></p>
+          <p><a href="https://github.com/GGC-DSA/health-status-prediction"> https://github.com/GGC-DSA/health-status-prediction </a></p>
         </div>
 
   </main><!-- End #main -->
