--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <div class="section-title">
           <h2>About our project</h2>
-          <p>Our goal was to determine what the single most impactful factor was on whether or not a person has heart disease. To do this, each one of us found a dataset and, after analyzing them seperately, we merged three of the datasets and analyzed them as a whole. Shababa's dataset was unable to be merged into the other three and therefor we analyzed it as a seperate dataset.</p>
+          <p>Our goal was to determine what the single most impactful factor was on whether or not a person has heart disease. To do this, each one of us found a dataset and, after analyzing them seperately, we merged three of the datasets and analyzed them as a whole. May's dataset was unable to be merged into the other three and therefor we analyzed it as a seperate dataset.</p>
         </div>
 
         <div class="row no-gutters">
